@@ -1,3 +1,9 @@
+2011-12-03 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFDictionary.c: Added class functions.
+	* Source/GSHashTable.c:
+	* Source/GSHashTable.h: Added add, set, replace, and remove functions.
+
 2011-12-02 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFRuntime.c: Added CFDictionary to build and fixed bug 
